--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.22.0",
