--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
     "react-hook-form": "^7.50.1",
@@ -19,6 +20,7 @@
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
