--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-grid-layout": "^1.4.4",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-number-format": "^5.3.3",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
